welcome.lessons.welcome.bat.bool1.In1020.scala.error
in1020:2: error: Unmatched closing brace '}' ignored here
	if ( a<=10 && a>=20)  }
                              ^in1020:4: error: ';' expected but 'else' found.
	}else{
         ^in1020:10: error: Unmatched closing brace '}' ignored here
 }
 ^